// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingPayoutInfo should render correctly 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "gap": 16,
      "justifyContent": "center",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        false,
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    You save up to 23% in network fees
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        false,
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    The bucket is not full yet and we are waiting for more participants to join.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "maxWidth": "100%",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          false,
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      will be sent to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              false,
              [
                {
                  "color": "#BAADA7",
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  {
                    "color": "#2B1911",
                  },
                ],
              ],
              false,
            ]
          }
        >
          bcrt
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#2B1911",
                  },
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 28,
                    },
                    {
                      "color": "#2B1911",
                    },
                  ],
                ],
                false,
              ]
            }
          >
            1qxhk
          </Text>
          l ... e
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#2B1911",
                  },
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 28,
                    },
                    {
                      "color": "#2B1911",
                    },
                  ],
                ],
                false,
              ]
            }
          >
            5raag
          </Text>
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "height": 16,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "visible",
              "width": 16,
            }
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  false,
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "maxWidth": "100%",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          false,
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      ETA
    </Text>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              false,
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          01:12:00
        </Text>
        <test-file-stub
          fill="#037DB5"
          style={
            [
              {
                "height": 16,
                "width": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`PendingPayoutInfo should render correctly when eta is not known yet 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "gap": 16,
      "justifyContent": "center",
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        false,
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    You save up to 23% in network fees
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        false,
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
        },
        false,
      ]
    }
  >
    The bucket is not full yet and we are waiting for more participants to join.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "maxWidth": "100%",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          false,
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      will be sent to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              false,
              [
                {
                  "color": "#BAADA7",
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  {
                    "color": "#2B1911",
                  },
                ],
              ],
              false,
            ]
          }
        >
          bcrt
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#2B1911",
                  },
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 28,
                    },
                    {
                      "color": "#2B1911",
                    },
                  ],
                ],
                false,
              ]
            }
          >
            1qxhk
          </Text>
          l ... e
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                false,
                [
                  {
                    "color": "#2B1911",
                  },
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 28,
                    },
                    {
                      "color": "#2B1911",
                    },
                  ],
                ],
                false,
              ]
            }
          >
            5raag
          </Text>
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "height": 16,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "visible",
              "width": 16,
            }
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  false,
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
